@startuml
skinparam classAttributeIconSize 0


class WebDashboard {
}

class HTTPAjaxRequest {
}

class HTTPmessage {
}

class AGVRepository{
}

class GetAllAGVController{
}

class AGV{
}


WebDashboard ...> HTTPAjaxRequest
HTTPAjaxRequest ...> HTTPmessage
WebDashboard ..> GetAllAGVController
GetAllAGVController ..> AGVRepository
AGVRepository ..> AGV


@enduml